--- a/style.css
+++ b/style.css
@@ -28,6 +28,11 @@ body{
     user-select: none;
 }
 
+.vtv a{
+    text-decoration: none;
+    color: wheat;
+}
+
 h1{
     animation: hh 10s;
     transition: 0.5s;
